--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,5 +13,5 @@ iam_role_policies: []
 iam_role_managed_policy_arns: []
 iam_role_tags: {}
 iam_roles:
-  - name: IAMRole
+  - name: RoleName
     profile_name: ProfileName
